# bank_ai_teller

./: .env.example  Dockerfile  Makefile  README.md  code.md  config.yml  main.py  mypy.ini  pyproject.toml  requirements.txt
actions/: __init__.py  livebank.py  speech.py
fsm/: __init__.py  guards.py  rules.yaml
fsm/prompts/: ACCOUNT_SELECT.json  BRANCH_SELECT.json  CARD_PICKUP.json  CARD_SELECT.json  DONE.json  FACE.json  FAILED.json  ID_SCAN.json  NFC_READ.json  OTP.json  OTP_SEND.json  PRINTING.json  START.json  STOCK_CHECK.json
llm_client/: HttpDecider.py  LLMDecider.py  __init__.py
orchestrator/: __init__.py  graph.py  state.py  timeouts.py
samples/: demo_run.py
src/: main.py
src/teller_ai/: __init__.py  config.py
src/teller_ai/actions/: livebank.py
src/teller_ai/fsm/: guards.py
src/teller_ai/fsm/prompts/: CARD_SELECT.json  OTP.json
src/teller_ai/llm_client/: LLMDecider.py
src/teller_ai/orchestrator/: graph.py  timeouts.py
src/teller_ai/samples/: __init__.py  demo_run.py
tests/: test_demo_happy.py  test_fsm_rules.py  test_guards.py
